--- a/VRChat/40/1283440.html
+++ b/VRChat/40/1283440.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "jS16N7wesxtSA2apC4q0SCYiA67WPu3nnRLpfNeUgT8="></script>
+    "CIMJH6ob5p7K7mu+rtxMQIHyJNZi6A72CTdd97sKmWI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『レレミー|Lelemy』","description":"2022/12/24 サポート終了しました。\n今後、VRChatのアップデートで不具合が生じたり、使用できなくなったとしても更新を行いません。また、質問にもお答えできません。\n2022/12/24 Support ended.\nI will not update this avatar in the future, even if it becomes faulty or unusable. I will also not be able to answer any questions about this model.\n\n\n【オリジナル3Dモデル】レレミー\n\n【制作者】寺井\n\n【内容物】\n●Lelemy_1.31.unitypackage\n　モデル、VRC_Avatar Descripter設定(Avatars3.0のみ)、マテリアル設定、PhysBones設定などが含まれるunitypackageデータになります。\n　予めVRChat SDK3の導入をお願いします。\n　また、本モデルのShaderとして、Arktoon Shadersを同梱しています。\n　本モデルはUnity2019.4.29f1での使用を想定しています。それ以外でのバージョンの動作は保証いたしかねます。\n\n●Lelemy_1.30.fbx\n　レレミーのモデルデータです。Blenderで制作を行っているので、それ以外のソフトで編集される場合の完全な互換性は保証いたしかねます。また、上半身の髪や服に隠れている部分はメッシュがありません。予めご了承ください。\n\n●Lelemy_Body.png/psd\n●Lelemy_Body_OutlineMask.png(Lelemy_Body.psdのアウトラインマスクレイヤーのみを表示したもの)\n●Lelemy_Hair.png/psd\n●Lelemy_Clothes.png/psd\n●Lelemy_Clothes_Accent.png/psd\n●Lelemy_FaceMask.png/psd\n●Lelemy_FaceOption.png/psd\n\n　テクスチャデータです。UV展開図はpsdデータにあります。\n\n●カラーバリエーション用テクスチャpngファイル\n　髪：8種、服：4種\n　（説明画像の髪：9種、服：5種とはデフォルトのカラーも含んだ数です）\n\n【ボーンについて】\nUnityのHumanoidリグに沿った作りになっています。Humanoid切り替え時に自動で設定されますが、Jaw、Left_Eye、Right_Eyeに不要なボーンがアサインされるので外してください。\n\n【モーフについて】\nVRChat用リップシンク15種、ハンドサイン用表情6種がセットアップされています。\n\n【利用規約】\n・本モデルの改造は自由にしていただいて構いません。\n・本モデル及び改造モデルの著作権は寺井に帰属するものとします。\n・本モデル及び改造モデルの再配布及び販売は禁止です。\n・本モデル及び改造モデルをVRChatやLavender、バーチャルキャスト等のサービスでアバターとして使用することを許可します。\n・本モデル及び改造モデルをVRChatやLavender、バーチャルキャスト等のサービスでワールドのオブジェクトとしてアップロードすることを許可します。\n・購入者本人以外が、アバターとして使用できるようにする行為は禁止です。(VRChatのペデスタルへの使用は禁止です。)\n・本モデル及び改造モデルを使用した画像・動画の作成・ライブ配信、ゲーム制作を許可します。商業利用・R-18・R-18Gへの利用についても制限しません。\n・モデルデータを再度使用できる状態での配布及び販売は禁止です。\n・政治、宗教、他者に対する誹謗中傷・差別・名誉棄損などへの使用は禁止です。\n・本モデル及び改造モデルを使用することによって生じたトラブルや損失、損害に対し寺井は一切責任を負わないものとします。\n\nこの利用規約及び価格は予告なく変更・改定されることがあります。ご了承ください。\n2019年5月24日\n\n更新履歴\n2022/10/27 (v1.31)\n・FXレイヤーに適用されていたMaskを削除\n\n2022/4/26 (v1.30)\n・アバターPrefabにPhysBonesコンポーネントを設定\n\n2021/10/22 (v1.2)\n・Avatars3.0対応を実施 (2.0は非対応に)\n・ハンドサイン用アニメーションを修正\n\n2019/12/15 (v1.1)\n・眉毛・目の透過\n・目テクスチャを別ファイルにし高精細化\n・フリルの縁に厚み付を行いアウトラインが出るよう修正\n・手の変更\n・服のアクセント部のテクスチャ変更\n・髪・うさ耳ウェイトの修正\n・口周りのアウトラインをマスク\n・デフォルト表情を口が閉じたものに修正\n・目が閉じた場合のテクスチャの伸びを修正\n・シェーダのパラメータ修正(影やリムライトを付加)\n・腕を短く修正\n・利用規約の修正\n\n不明点・質問等がありましたら以下にご連絡ください。\nTwitter：@c_alex_x","url":"https://booth.pm/ja/items/1283440","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/ca2a06f5-5579-4ad5-a95c-580a09fd8250/i/1283440/e6219a5c-2d5f-42a2-a229-91f96f749c7a_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jS16N7wesxtSA2apC4q0SCYiA67WPu3nnRLpfNeUgT8="></script>
+    nonce="CIMJH6ob5p7K7mu+rtxMQIHyJNZi6A72CTdd97sKmWI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -174,7 +174,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      413
+                                      412
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -190,7 +190,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      413
+                                      412
                                     </div>
                                   </div></a>
                                 </div>
@@ -500,9 +500,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
