--- a/VRChat/13/1385013.html
+++ b/VRChat/13/1385013.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "tg2KAiWWFHmdiNFePEYxFE1xvDkyNurFvKqmiLEmAlg="></script>
+    "gfGbISwa2aA2VLAKjbtlR4wXaZ6xTwcQCzJjpenNt/A="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"サマーサンダル｜#VRoid","description":"厚底ウェッジソールサンダルです。\n足元をお洒落に飾りましょう！\n\nVRoid Studioの靴（ワンピース）に使用する想定で製作しています。\n\n特典版には肌の影と色変更用PSDデータが付属します。\n\nお着替えした姿を投稿するときは@yui_noe宛にリプライやタグ付けをしてくださると嬉しいです。\nTwitter: https://twitter.com/yui_noe","url":"https://booth.pm/ja/items/1385013","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"500","highPrice":"700"},"image":"https://booth.pximg.net/c/620x620/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1385013/c1c45976-cc11-44e3-9391-e827d102e027_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tg2KAiWWFHmdiNFePEYxFE1xvDkyNurFvKqmiLEmAlg="></script>
+    nonce="gfGbISwa2aA2VLAKjbtlR4wXaZ6xTwcQCzJjpenNt/A="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -539,9 +539,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
