--- a/VRChat/25/1384125.html
+++ b/VRChat/25/1384125.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "2J0fELvSrkDH/etZCVlO1k5Ke1JrrtpJFTz4+nFA07k="></script>
+    "fmmboenNDQg0JuRSp2P7D6B/iDWVeu94cgKJQ1vVFrM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"魔法少女のつえ","description":"魔法少女が使っていそうな魔法の杖です。\nEmissionの値をいじれば中心の水晶部分を光らせることも可能です。\n残念ながら魔法は出ませんので物理で押し通してください。\n\n2020/10/23 追記\nエミッターを付けました。キラキラした星が出ます。ちょっと魔法っぽい。\n\n\nまた、本製品はユニティちゃんトゥーンシェーダー2(UTS2_v2.0.7)を使用しています。\n同梱しておりますUTS2_ShaderOnly_v2.0.7_Release.unitypackageを事前にインポートしてください。","url":"https://booth.pm/ja/items/1384125","offers":{"priceCurrency":"JPY","@type":"Offer","price":"330"},"image":"https://booth.pximg.net/c/620x620/5e3688dc-a990-4181-9d0b-7698aa7c892e/i/1384125/5eebd5fc-2f70-43bc-a62e-cb213e2275d3_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2J0fELvSrkDH/etZCVlO1k5Ke1JrrtpJFTz4+nFA07k="></script>
+    nonce="fmmboenNDQg0JuRSp2P7D6B/iDWVeu94cgKJQ1vVFrM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -167,7 +167,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      144
+                                      145
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -183,7 +183,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      144
+                                      145
                                     </div>
                                   </div></a>
                                 </div>
@@ -493,9 +493,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
