--- a/VRChat/56/1384756.html
+++ b/VRChat/56/1384756.html
@@ -75,49 +75,27 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-  </head>
-  <body>
-    <div class="mini-player-controller" style="display: none;">
-      <a class="scroller" data-smooth-scroll="true"><img class=
-      "mini-player-controller__image" src=
-      "https://asset.booth.pm/assets/thumbnail_placeholder_c_300-09027647543d43ee525b2a7fe28d5ed5a3b6069d0c596c89b21776543ed1c0fe.png"></a><a class="scroller mini-player-information"
-      data-smooth-scroll="true">
-      <div class="mini-player-information__item-name"></div>
-      <div class="mini-player-information__shop-name"></div>
-      <div class="mini-player-information__navigation">
-        試聴中の商品へスクロール
-      </div></a>
-      <div class="mini-player-controls">
-        <div class="mini-player-mode-ui">
-          <div class="mini-player-mode-ui__knob"></div>
-          <div class="mini-player-mode-ui__short">
-            15秒
-          </div>
-          <div class="mini-player-mode-ui__full">
-            フル
-          </div>
-        </div>
-        <div class="mini-player-play-ui"></div>
-      </div>
-    </div>
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "vvDeh8K9mWLbui6MoQNukFrkYFLKlW2NusV3mIh03cc="></script>
+    "dARfFze668uyB2e3P1ssXbascjFjVl0jgIJX5KgiqRc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"でぃぐらてぃーむ式お茶碗/ご飯付きお茶碗","description":"でぃぐらてぃーむ式お茶碗/ご飯付きお茶碗 Readme\n━━━━━\n\n練習で作ったお茶碗のFBXです。おまけでご飯が盛られたデータも同梱しています。\nポリゴン数少なめに作ったので、Quest版VRCにも持ち込めるかも？\n\n【更新履歴】\n2020/03/23 V1.1\n底部のメッシュの法線を間違えていたのを修正\n\n2019/05/24 V1.0\n初版\n\n【規約】\n・改変→可（むしろ推奨）\n・再配布→不可（改変した場合でも不可）\n・VRC上でのワールドやアバターに組み込んでのPublic公開→可\n（ただし、当データが主となる形での公開は不可）\n・ゲームやアニメーションなど、個人での利用→可（収益化も可）\n\n手倉テイム個人、および運営関係者の名前、作品名、イベント名を含んだ、あるいは類似する商標を、書面による許可なく意図的に登録する行為を行うことを禁止します。\n（2022/05/17 暫定的追記。次回zip更新時にreadme.txtへ追加します）\n\nTwitter: @diglateam3\n個人サイト「DiglaWorks」: https://diglateam3.com/","url":"https://booth.pm/ja/items/1384756","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/d0f4a82c-f633-40af-bb66-a1f35f2956a9/i/1384756/5ccfe382-34b9-4af4-9886-c5822d84e769_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
-    "apple-touch-icon-precomposed"><noscript><iframe height="0"
-    src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
+    "apple-touch-icon-precomposed">
+  </head>
+  <body>
+    <noscript><iframe height="0" src=
+    "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vvDeh8K9mWLbui6MoQNukFrkYFLKlW2NusV3mIh03cc="></script>
+    nonce="dARfFze668uyB2e3P1ssXbascjFjVl0jgIJX5KgiqRc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -486,9 +464,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
