--- a/VRChat/39/1381939.html
+++ b/VRChat/39/1381939.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "g1ec1iEzdj/imeMCfrPn5wBIfsz1mTKl4YmeaW85MLY="></script>
+    "0ZWm0y4FhtQco9trKLYMTMFBZSd+LYkbyD7wbWqf7r8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"邪教徒の眼球（VRChat用モデル）","description":"jakyoutoがVRChatで使用する自作単眼アバターの眼球と同じ手法で作った眼球だけのモデルです。シェイプキーは設定してません。unlitシェーダーのマテリアルを適応したprefabを含むunitypackageが入っています。説明画像にあるようにもともと単眼アバターの見栄えをよくするために作ったものですが、単眼以外のアバターでも使える場合はあるかもしれません。","url":"https://booth.pm/ja/items/1381939","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/f4df878d-e8af-43d9-ae25-01e58089f738/i/1381939/d399f801-40a3-4376-8604-ffb50489a24b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="g1ec1iEzdj/imeMCfrPn5wBIfsz1mTKl4YmeaW85MLY="></script>
+    nonce="0ZWm0y4FhtQco9trKLYMTMFBZSd+LYkbyD7wbWqf7r8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -380,9 +380,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
